@@ -9,7 +9,7 @@ use constant PORT => 13432;
 
 my $base = 'http://localhost:'.PORT;
 
-$ENV{http_proxy} = ''; # All our tests are running on localhost
+delete $ENV{http_proxy}; # All our tests are running on localhost
 
 BEGIN {
     use_ok( 'Test::WWW::Mechanize' );
