@@ -7,6 +7,7 @@
         <form action="form.html">
         <input name="name" size="15">
         <input name="email" size="15" maxlength="40">
+        <input type="submit" name="big_button">
         </form>
     </body>
 </html>
